[gd_scene load_steps=7 format=3 uid="uid://dlo8rvo4a1kwy"]

[ext_resource type="Script" uid="uid://ukaj8dl7dd8p" path="res://components/code_editor/code_editor.gd" id="1_uoi7k"]
[ext_resource type="FontFile" uid="uid://bv2mw5flv1r1q" path="res://resources/font/GoogleSansCode-VariableFont_wght.ttf" id="2_2c8lu"]
[ext_resource type="Script" uid="uid://85gv2a62whc8" path="res://src/parser/custom_gdscript_syntax_highlighter.gd" id="3_3l5bv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vf2se"]
bg_color = Color(1, 0, 0, 0)

[sub_resource type="FontVariation" id="FontVariation_3l5bv"]
base_font = ExtResource("2_2c8lu")

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_gqbsp"]
script = ExtResource("3_3l5bv")
metadata/_custom_type_script = "uid://85gv2a62whc8"

[node name="CodeEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vf2se")
script = ExtResource("1_uoi7k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CodeEdit" type="CodeEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontVariation_3l5bv")
syntax_highlighter = SubResource("SyntaxHighlighter_gqbsp")
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true

[node name="ErrorDescriptor" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5023, 0.43551, 1)
text = "Sorryyy, error messages don't work for this prototype, but something went wrong with your script <3"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit
"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
